Fixed text alignment for h1 tags. Caused an issue at the copyright footer

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@ h1, h2, h3, h4, h5, h6 {
 	text-transform: uppercase;
 	font-weight: 400;
 	margin-bottom: 10px;
+	text-align: center;
 }
 body #load {
 	width: 100%;
